<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flashboard</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="review">Review</string>
    <string name="insert_cards">Insert Cards</string>
    <string name="randomize">Randomize</string>
    <string name="start">Start!</string>
    <string name="add">+</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="insert">Insert!</string>
    <string name="title_activity_study">StudyActivity</string>
    <string name="deck_names">deck_names</string>
    <string name="resources">resources</string>
    <string name="title_activity_insert_new_deck">Insert New Deck</string>
    <string name="insert_new_deck_text">Type new subject name.</string>
    <string name="submit_deck_name">Submit</string>
    <string name="cancel_new_deck_request">Cancel</string>
    <string name="insert_card_boolean">Boolean</string>
    <string name="choose_subject">Choose Subject</string>
    <string name="study_subject">Study Subject</string>
    <string name="viewing_card">Viewing Card</string>
    <string name="card_number">Number</string>
    <string name="card_content">Content</string>
    <string name="previous_card">Previous Card</string>
    <string name="next_card">Next Card</string>
    <string name="current_subject">Subject</string>
    <string name="checked">Checked</string>
    <string name="delete_card">Delete Card</string>
</resources>
