<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.tylerterbush.flashboard.StudyActivity"
    android:background="@android:color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_subject"
        android:id="@+id/current_subject"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/abc_text_size_large_material"
        android:textColor="@android:color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewing_card"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/abc_text_size_large_material"
        android:textColor="@android:color/black"/>
    <TextView
        android:id="@+id/card_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_number"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/abc_text_size_large_material"
        android:textColor="@android:color/black"
        />
    <TextView
        android:id="@+id/card_content"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/card_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:background="@android:color/holo_orange_light"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:text="@string/previous_card"
            android:id="@+id/previous_card"
            android:onClick="previousCard"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:text="@string/next_card"
            android:id="@+id/next_card"
            android:onClick="nextCard"/>
        </LinearLayout>


</LinearLayout>
